# trash_detect

./: CMakeLists.txt  package.xml
msg/: trash_location.msg
src/: TrashDetector.cpp  TrashDetector.h  calibrate.cpp  calibrate.h  calibrate_node.cpp  img_process.cpp  trash.cpp  trash.h  trash_detect_node.cpp
