<?xml version="1.0"?>
<package>
	<name>trash_detect</name>
	<version>0.0.0</version>
	<description>The trash_detect package</description>

	<maintainer email="marekl@todo.todo">marekl</maintainer>

	<license>MIT?</license>

	<!-- <url type="website">http://wiki.ros.org/trash_detect</url> -->

	<!-- <author email="jane.doe@example.com">Jane Doe</author> -->

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>cv_bridge</build_depend>
	<build_depend>image_transport</build_depend>
	<run_depend>message_runtime</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>cv_bridge</run_depend>
	<run_depend>image_transport</run_depend>

</package>